# ecad

./: .env_template  .gitignore  README.md  ecad.yml  pyproject.toml  pyrightconfig.json  requirements.txt
assets/docs/: benchmarking.md  datasets.md  ecad-schedules.md  image-generation.md  initial-population.md  preparing-prompts.md
ecad/: types.py  utils.py
ecad/benchmark/: compute_clip.py  compute_fid.py  compute_latency.py  compute_macs.py  generate_coco_embeddings.py  generate_embeddings.py  generate_embeddings_parti.py  generate_images.py  generate_mjhq_embeddings.py  score_images.py
ecad/dataset_utils/: prompt_embedding_dataset.py
ecad/genetic/: flux_population_io_manager.py  flux_problem.py  pixart_population_io_manager.py  pixart_problem.py  population_io_manager.py  sampling.py  train_nsga2_base.py  train_nsga2_single_gpu.py
ecad/graph/: builder.py  flux_builder.py  func_registry.py  node.py  pixart_builder.py
ecad/image_generators/: flux_image_generator.py  image_generator.py  load_image_generator.py  pixart_alpha_image_generator.py  pixart_image_generator.py  pixart_sigma_image_generator.py
ecad/inference/: inference.py
ecad/pipelines/: load_pipeline.py  pass_through.py  tgate.py
ecad/transformer_2d_models/: flux_transformer_2d_edited.py  pass_through_transformer_2d.py  pixart_transformer_2d_edited.py
ecad/transformer_blocks/: cached_flux_transformer_block.py  custom_attn_ff.py  (+1 more)
prompts/: ImageRewardPrompts.txt  prompts-for-flux-1024-qualitative.txt  prompts-for-flux-256-qualitative.txt  prompts-for-pixart-alpha-256-qualitative.txt
(+1680 files in other folders)
