[project]
name = "ecad"
version = "0.1.0"
description = "Code for Evolutionary Caching to Accelerate Your Off-the-Shelf Diffusion Model"
authors = [
    { name = "Anirud Aggarwal", email = "anirud@umd.edu" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecad"]
